syntax = "proto3";

package log;

option go_package="log/logpb";

////////////////////////////////////////////////////////////////////////////////
// Log service
////////////////////////////////////////////////////////////////////////////////

enum LogLevel{
	FATAL_MESSAGE=0;
	ERROR_MESSAGE=1;
	WARN_MESSAGE=2;
	INFO_MESSAGE=3;
	DEBUG_MESSAGE=4;
	TRACE_MESSAGE=5;
}

message LogInfo{
	int64 date = 1;
	LogLevel level = 2;
	string application = 3;
	string userId = 4;
	string userName = 5;
	string method = 6;
	string message = 7;
}

message LogRqst{
	LogInfo info = 1;
}

message LogRsp{
	bool result=1;
}

message DeleteLogRqst{
	LogInfo log = 1;
}

message DeleteLogRsp{
	bool result=1;
}

message GetLogRqst{
	string query = 1;
}

message GetLogRsp{
	repeated LogInfo infos = 1;
}

message ClearAllLogRqst{
	string query = 1;
}

message ClearAllLogRsp{
	bool result=1;
}

service LogService {
	/** Set a method into the log... **/
	rpc Log(LogRqst) returns(LogRsp);
	
	/** Get the list of logs **/
	rpc GetLog(GetLogRqst) returns(stream GetLogRsp);

	/** Delete a single log entry **/
	rpc DeleteLog(DeleteLogRqst) returns(DeleteLogRsp);
	
	/** Delete all log or logs that match the key pattern... **/
	rpc ClearAllLog(ClearAllLogRqst) returns(ClearAllLogRsp);
}
